--- a/src/main/resources/text_fr_FR.properties
+++ b/src/main/resources/text_fr_FR.properties
@@ -1,4 +1,15 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-hello = Bonjour
+hello = Ch\u00e0o m\u1ea5y ku
+label.register.registerform = \u0110\u0103ng k\u00fd
+label.register.username =  T\u00ean \u0111\u0103ng nh\u1eadp
+label.register.msg1 =  This will be your login user name
+label.register.password = M\u1eadt kh\u1ea9u
+label.register.passwordconfirm = Nh\u1eadp l\u1ea1i m\u1eadt kh\u1ea9u
+label.register.email = Email
+label.register.address = \u0110\u1ecba ch\u1ec9
+label.register.dob = Ng\u00e0y sinh
+label.register.msg2 = T\u00f4i \u0111\u1ed3ng \u00fd v\u1edbi m\u1ecdi \u0111i\u1ec1u kho\u1ea3n
+label.register.msg3 = B\u1ea1n s\u1ebd \u0111\u01b0\u1ee3c nh\u1eadn email x\u00e1c nh\u1eadn
+label.register.msg4 = H\u00e3y ki\u1ec3m tra th\u00f9ng th\u01b0 r\u00e1c n\u1ebfu kh\u00f4ng t\u00ecm th\u1ea5y
