change to test vn and english language

--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -14,3 +14,6 @@ label.register.dob = Ng\u00e0y sinh
 label.register.msg3 = B\u1ea1n s\u1ebd \u0111\u01b0\u1ee3c nh\u1eadn email x\u00e1c nh\u1eadn
 label.register.msg4 = H\u00e3y ki\u1ec3m tra th\u00f9ng th\u01b0 r\u00e1c n\u1ebfu kh\u00f4ng t\u00ecm th\u1ea5y
 label.register.btn = \u0110\u0103ng k\u00fd
+label.register.msg5 =T\u00f4i \u0111\u1ed3ng \u00fd v\u1edbi
+label.register.msg6=m\u1ecdi \u0111i\u1ec1u kho\u1ea3n
+label.register.msg7= khi \u0111\u0103ng k\u00fd
