--- a/src/main/resources/text_fr_FR.properties
+++ b/src/main/resources/text_fr_FR.properties
@@ -1,15 +1,19 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-hello = Ch\u00e0o m\u1ea5y ku
-label.register.registerform = \u0110\u0103ng k\u00fd
-label.register.username =  T\u00ean \u0111\u0103ng nh\u1eadp
-label.register.msg1 =  This will be your login user name
-label.register.password = M\u1eadt kh\u1ea9u
-label.register.passwordconfirm = Nh\u1eadp l\u1ea1i m\u1eadt kh\u1ea9u
-label.register.email = Email
-label.register.address = \u0110\u1ecba ch\u1ec9
-label.register.dob = Ng\u00e0y sinh
-label.register.msg2 = T\u00f4i \u0111\u1ed3ng \u00fd v\u1edbi m\u1ecdi \u0111i\u1ec1u kho\u1ea3n
-label.register.msg3 = B\u1ea1n s\u1ebd \u0111\u01b0\u1ee3c nh\u1eadn email x\u00e1c nh\u1eadn
-label.register.msg4 = H\u00e3y ki\u1ec3m tra th\u00f9ng th\u01b0 r\u00e1c n\u1ebfu kh\u00f4ng t\u00ecm th\u1ea5y
+hello = Bonjour
+label.register.title = Page d'inscription des patients hospitalis\u00e9s
+label.register.registerform = Formulaire d'inscription
+label.register.username =  Nom d'utilisateur
+label.register.msg1 =  Ce sera votre nom d'utilisateur de connexion
+label.register.password = Mot de passe
+label.register.passwordconfirm = Confirmer le mot de passe
+label.register.email = Adresse e-mail
+label.register.address = Adresse
+label.register.dob = Date de naissance
+label.register.msg3 = Vous recevrez un email pour compl\u00e9ter le processus d'enregistrement et de validation
+label.register.msg4 = Assurez-vous de v\u00e9rifier vos dossiers de spam
+label.register.btn = Registre
+label.register.msg5 = Je suis d'accord avec
+label.register.msg6= termes et conditions
+label.register.msg7= d'inscription.
