add multi lang to resetpass jsp

--- a/src/main/resources/text_fr_FR.properties
+++ b/src/main/resources/text_fr_FR.properties
@@ -4,16 +4,21 @@
 hello = Bonjour
 label.register.title = Page d'inscription des patients hospitalis\u00e9s
 label.register.registerform = Formulaire d'inscription
-label.register.username =  Nom d'utilisateur
+label.username =  Nom d'utilisateur
 label.register.msg1 =  Ce sera votre nom d'utilisateur de connexion
-label.register.password = Mot de passe
-label.register.passwordconfirm = Confirmer le mot de passe
-label.register.email = Adresse e-mail
-label.register.address = Adresse
-label.register.dob = Date de naissance
+label.password = Mot de passe
+label.passwordconfirm = Confirmer le mot de passe
+label.email = Adresse e-mail
+label.address = Adresse
+label.dob = Date de naissance
 label.register.msg3 = Vous recevrez un email pour compl\u00e9ter le processus d'enregistrement et de validation
 label.register.msg4 = Assurez-vous de v\u00e9rifier vos dossiers de spam
 label.register.btn = Registre
 label.register.msg5 = Je suis d'accord avec
 label.register.msg6= termes et conditions
 label.register.msg7= d'inscription.
+label.resetpass.title = Page de r\u00e9initialisation de l'h\u00f4pital
+label.resetpass.forgot = Mot de passe oubli\u00e9?
+label.resetpass.resetsuccess = R\u00e9initialiser avec succ\u00e8s
+label.resetpass.resetbtn = r\u00e9initialiser le mot de passe
+label.resetpass.msg1 = Vous pouvez r\u00e9initialiser votre mot de passe ici.
