modify and update multi language to forgot and reset password jsp

--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -2,6 +2,9 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 hello = Ch\u00e0o m\u1ea5y ku
+VN = Ti\u1ebfng Vi\u1ec7t
+FR = Ti\u1ebfng Ph\u00e1p
+EN = Ti\u1ebfng Anh
 label.register.title = Trang \u0111\u0103ng k\u00fd
 label.register.registerform = \u0110\u0103ng k\u00fd
 label.username =  T\u00ean \u0111\u0103ng nh\u1eadp
@@ -17,8 +20,13 @@ label.register.btn = \u0110\u0103ng k\u00fd
 label.register.msg5 =T\u00f4i \u0111\u1ed3ng \u00fd v\u1edbi
 label.register.msg6=m\u1ecdi \u0111i\u1ec1u kho\u1ea3n
 label.register.msg7= khi \u0111\u0103ng k\u00fd
-label.resetpass.title = Trang reset m\u1eadt kh\u1ea9u
-label.resetpass.forgot = Qu\u00ean m\u1eadt kh\u1ea9u \u00e0?
-label.resetpass.resetsuccess = Reset m\u1eadt kh\u1ea9u th\u00e0nh c\u00f4ng
-label.resetpass.resetbtn = Reset
-label.resetpass.msg1 = Reset m\u1eadt kh\u1ea9u c\u1ee7a b\u1ea1n t\u1ea1i \u0111\u00e2y.
+label.forgotpass.title = Trang reset m\u1eadt kh\u1ea9u
+label.forgotpass.forgot = Qu\u00ean m\u1eadt kh\u1ea9u \u00e0?
+label.forgotpass.resetsuccess = Reset m\u1eadt kh\u1ea9u th\u00e0nh c\u00f4ng
+label.forgotpass.msg1 = Chung t\u00f4i s\u1ebd g\u1eedi link reset m\u1eadt kh\u1ea9u
+label.forgotpass.resetbtn = Reset
+label.reset.title = Trang reset m\u1eadt kh\u1ea9u
+label.reset.reset = Reset m\u1eadt kh\u1ea9u
+label.reset.newpass = M\u1eadt kh\u1ea9u m\u1edbi
+label.reset.msg1 = H\u00e3y ch\u1eafc ch\u1eafn l\u00e0 m\u1eadt kh\u1ea9u m\u1edbi b\u1ea3o m\u1eadt cao v\u00e0 d\u1ec5 nh\u1edb
+label.reset.btn = Reset m\u1eadt kh\u1ea9u
