--- a/src/main/resources/text_fr_FR.properties
+++ b/src/main/resources/text_fr_FR.properties
@@ -2,6 +2,9 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 hello = Bonjour
+VN = Vietnamien
+FR = Fran\u00e7ais
+EN = Anglais
 label.register.title = Page d'inscription des patients hospitalis\u00e9s
 label.register.registerform = Formulaire d'inscription
 label.username =  Nom d'utilisateur
@@ -17,8 +20,13 @@ label.register.btn = Registre
 label.register.msg5 = Je suis d'accord avec
 label.register.msg6= termes et conditions
 label.register.msg7= d'inscription.
-label.resetpass.title = Page de r\u00e9initialisation de l'h\u00f4pital
-label.resetpass.forgot = Mot de passe oubli\u00e9?
-label.resetpass.resetsuccess = R\u00e9initialiser avec succ\u00e8s
-label.resetpass.resetbtn = r\u00e9initialiser le mot de passe
-label.resetpass.msg1 = Vous pouvez r\u00e9initialiser votre mot de passe ici.
+label.forgotpass.title = Page de r\u00e9initialisation de l'h\u00f4pital
+label.forgotpass.forgot = Mot de passe oubli\u00e9?
+label.forgotpass.resetsuccess = R\u00e9initialiser avec succ\u00e8s
+label.forgotpass.resetbtn = r\u00e9initialiser le mot de passe
+label.forgotpass.msg1 = En cliquant sur "R\u00e9initialiser le mot de passe", nous enverrons un lien de r\u00e9initialisation du mot de passe
+label.reset.title = R\u00e9initialiser la page
+label.reset.reset = R\u00e9initialiser le mot de passe
+label.reset.newpass = Nouveau mot de passe
+label.reset.msg1 = Assurez-vous que votre mot de passe est solide et facile \u00e0 retenir
+label.reset.btn = R\u00e9initialiser le mot de passe
