--- a/src/main/resources/text_fr_FR.properties
+++ b/src/main/resources/text_fr_FR.properties
@@ -1,6 +1,9 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
+EN = Anglais
+VN = Vietnamien
+FR = Fran\u00e7ais
 label.register.registerform = Formulaire d'inscription
 label.username =  Nom d'utilisateur
 label.register.msg1 =  Ce sera votre nom d'utilisateur de connexion
