--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -1,6 +1,9 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
+EN = Ti\u1ebfng Anh
+VN = TI\u1ebfng Vi\u1ec7t
+FR = Ti\u1ebfng Ph\u00e1p
 label.register.registerform = \u0110\u0103ng k\u00fd
 label.username =  T\u00ean \u0111\u0103ng nh\u1eadp
 label.register.msg1 =  This will be your login user name
