--- a/src/main/resources/text_fr_FR.properties
+++ b/src/main/resources/text_fr_FR.properties
@@ -26,3 +26,4 @@ label.reset.reset = R\u00e9initialiser le mot de passe
 label.reset.newpass = Nouveau mot de passe
 label.reset.msg1 = Assurez-vous que votre mot de passe est solide et facile \u00e0 retenir
 label.reset.btn = R\u00e9initialiser le mot de passe
+label.home.title = Doctor STRANGE
