--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -26,3 +26,4 @@ label.reset.reset = \u0110\u1ed5i m\u1eadt kh\u1ea9u
 label.reset.newpass = M\u1eadt kh\u1ea9u m\u1edbi
 label.reset.msg1 = H\u00e3y ch\u1eafc ch\u1eafn l\u00e0 m\u1eadt kh\u1ea9u m\u1edbi b\u1ea3o m\u1eadt cao v\u00e0 d\u1ec5 nh\u1edb
 label.reset.btn = \u0110\u1ed5i m\u1eadt kh\u1ea9u
+label.home.title = Trang \u0110\u1ea1i Phu
