--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -4,15 +4,21 @@
 EN = Ti\u1ebfng Anh
 VN = TI\u1ebfng Vi\u1ec7t
 FR = Ti\u1ebfng Ph\u00e1p
-register.registerform = \u0110\u0103ng k\u00fd
 username =  T\u00ean \u0111\u0103ng nh\u1eadp
 password = M\u1eadt kh\u1ea9u
 passwordconfirm = Nh\u1eadp l\u1ea1i m\u1eadt kh\u1ea9u
 email = Email
 address = \u0110\u1ecba ch\u1ec9
 dob = Ng\u00e0y sinh
-firstname = First Name
-lastname = Last Name
+firstname = T\u00ean
+lastname = H\u1ecd
+title = Trang \u0110\u1ea1i Phu
+finddoc = T\u00ecm B\u00e1c S\u0129
+appt = \u0110\u1eb7t L\u1ecbch
+language = Ng\u00f4n Ng\u1eef
+contact = Li\u00ean H\u1ec7
+signinup = \u0110\u0103ng k\u00fd/\u0110\u0103ng Nh\u1eadp
+register.registerform = \u0110\u0103ng k\u00fd
 register.msg1 =  This will be your login user name
 register.msg3 = B\u1ea1n s\u1ebd \u0111\u01b0\u1ee3c nh\u1eadn email x\u00e1c nh\u1eadn
 register.msg4 = H\u00e3y ki\u1ec3m tra th\u00f9ng th\u01b0 r\u00e1c n\u1ebfu kh\u00f4ng t\u00ecm th\u1ea5y
@@ -28,9 +34,3 @@ reset.reset = \u0110\u1ed5i m\u1eadt kh\u1ea9u
 reset.newpass = M\u1eadt kh\u1ea9u m\u1edbi
 reset.msg1 = H\u00e3y ch\u1eafc ch\u1eafn l\u00e0 m\u1eadt kh\u1ea9u m\u1edbi b\u1ea3o m\u1eadt cao v\u00e0 d\u1ec5 nh\u1edb
 reset.btn = \u0110\u1ed5i m\u1eadt kh\u1ea9u
-home.title = Trang \u0110\u1ea1i Phu
-home.finddoc = T\u00ecm B\u00e1c S\u0129
-home.appt = \u0110\u1eb7t L\u1ecbch
-home.language = Ng\u00f4n Ng\u1eef
-home.contact = Li\u00ean H\u1ec7
-home.signinup = \u0110\u0103ng k\u00fd/\u0110\u0103ng Nh\u1eadp
