new UI new life

--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -18,6 +18,7 @@ appt = \u0110\u1eb7t L\u1ecbch
 language = Ng\u00f4n Ng\u1eef
 contact = Li\u00ean H\u1ec7
 signinup = \u0110\u0103ng k\u00fd/\u0110\u0103ng Nh\u1eadp
+signout = \u0110\u0103ng xu\u1ea5t
 register.registerform = \u0110\u0103ng k\u00fd
 register.msg1 =  This will be your login user name
 register.msg3 = B\u1ea1n s\u1ebd \u0111\u01b0\u1ee3c nh\u1eadn email x\u00e1c nh\u1eadn
