update little language

--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -19,6 +19,20 @@ language = Ng\u00f4n Ng\u1eef
 contact = Li\u00ean H\u1ec7
 signinup = \u0110\u0103ng k\u00fd/\u0110\u0103ng Nh\u1eadp
 signout = \u0110\u0103ng xu\u1ea5t
+home = Trang Ch\u1ee7
+termsofservice = \u0110i\u1ec1u Kho\u1ea3n D\u1ecbch V\u1ee5
+privacypolicy = Ch\u00ednh S\u00e1ch B\u1ea3o M\u1eadt
+phonenumber = \u0110i\u1ec7n Tho\u1ea1i
+usefullinks = Li\u00ean K\u1ebft
+other = Kh\u00e1c
+aboutus = V\u1ec1 Ch\u00fang T\u00f4i
+services = D\u1ecbch V\u1ee5
+facts = S\u1ed1 Li\u1ec7u
+clients = C\u00e1c C\u01a1 S\u1edf
+team = Team
+findalldoctor = T\u00ecm T\u1ea5t C\u1ea3 B\u00e1c S\u0129
+setanappointment =\u0110\u1eb7t L\u1ecbch H\u1eb9n
+health = S\u1ee9c Kh\u1ecfe
 register.registerform = \u0110\u0103ng k\u00fd
 register.msg1 =  This will be your login user name
 register.msg3 = B\u1ea1n s\u1ebd \u0111\u01b0\u1ee3c nh\u1eadn email x\u00e1c nh\u1eadn
