--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -16,6 +16,28 @@ title = Trang \u0110\u1ea1i Phu
 finddoc = T\u00ecm B\u00e1c S\u0129
 appt = \u0110\u1eb7t L\u1ecbch
 language = Ng\u00f4n Ng\u1eef
+signup = \u0110\u0103ng K\u00fd
+yourprofile = Trang C\u00e1 Nh\u00e2n
+backtohomepage = Quay L\u1ea1i Trang Ch\u1ee7
+rememberme = Ghi Nh\u1edb \u0110\u0103ng Nh\u1eadp
+imnew = Ng\u01b0\u1eddi M\u1edbi
+ihaveanaccount =  \u0110\u00e3 C\u00f3 T\u00e0i Kho\u1ea3n
+getstarted = B\u1eaft \u0110\u1ea7u
+mission = Nhi\u1ec7m V\u1ee5 
+plan = K\u1ebf Ho\u1ea1ch
+vision = T\u1ea7m Nh\u00ecn
+becomeamember = Tham Gia V\u1edbi Ch\u00fang T\u00f4i
+bookmarkyourdoctor = B\u00e1c S\u0129 Y\u00eau Th\u00edch
+gethealthinformation = Th\u00f4ng Tin S\u1ee9c Kh\u1ecfe
+community = C\u1ed9ng \u0110\u1ed3ng
+name = T\u00ean
+subject = Ch\u1ee7 \u0110\u1ec1
+message = Tin Nh\u1eafn
+sendmessage = G\u1eedi Tin
+healthservice = D\u1ecbch V\u1ee5
+medicalspecialities = Chuy\u00ean Khoa
+numberofdoctor = B\u00e1c S\u0129
+hoursaday = Gi\u1edd
 contact = Li\u00ean H\u1ec7
 signinup = \u0110\u0103ng k\u00fd/\u0110\u0103ng Nh\u1eadp
 signout = \u0110\u0103ng xu\u1ea5t
