--- a/src/main/resources/text_en_US.properties
+++ b/src/main/resources/text_en_US.properties
@@ -37,7 +37,7 @@ sendmessage = Send Message
 healthservice = Health Service
 medicalspecialities = Medical Specialities
 numberofdoctor = Number Of Doctor
-hoursaday = Hours a Day aaaaa
+hoursaday = Hours a Day
 signinup = Sign In/Sign Up
 signout = Log out
 home = Home
