--- a/src/main/resources/text_en_US.properties
+++ b/src/main/resources/text_en_US.properties
@@ -38,6 +38,7 @@ healthservice = Health Service
 medicalspecialities = Medical Specialities
 numberofdoctor = Number Of Doctor
 hoursaday = Hours a Day
+contact = Contact
 signinup = Sign In/Sign Up
 signout = Log out
 home = Home
@@ -54,19 +55,49 @@ team = Team
 findalldoctor = Find All Doctor
 setanappointment =Set An Appointment
 health = Health
-register.registerform = Registration Form
-register.msg1 =  This will be your login username
-register.msg3 = You will receive an email to complete the registration and validation process
-register.msg4 = Be sure to check your spam folders
-register.btn = Register
-register.msg5 =I agree with the
-register.msg6=terms and conditions
-register.msg7=for Registration.
-forgotpass.forgot = Forgot Password?
-forgotpass.msg1 = By clicking "Reset Password" we will send a password reset link
-forgotpass.resetsuccess = Reset Successfully
-forgotpass.resetbtn = Reset Password
-reset.reset = Reset Password
-reset.newpass = New Password
-reset.msg1 = Make sure your password is strong and easy to remember
-reset.btn = Reset Password
+searchdotorbyname = Search doctors by name, speciality
+male = Male
+female = Female
+other = Other
+fullname = Full name
+patientinformation = Patient Information
+gender = Gender
+appointmentdetail = Appointment Detail
+doctor = Doctor
+speciality = Speciality
+specificspeciality = Specific Speciality
+date = Date
+time = Time
+otheractivitiesdiploma = Other activities and diploma
+receiceapptviaemail = Receive Appointment Information via Email
+personalinformation = Personal Information
+workingplace = Working Place
+degree = Degree
+insurance = Insurance
+workhour = Work Hour
+addtobookmark = Add to Bookmark
+hospital = Hospital
+hospitalinformation = Hospital Information
+director = Director 
+website = Website
+option = Option
+general = General
+edityourprofile = Edit Your Profile
+changepassword= Change Password
+bookmark =Bookmark
+insurancenumber = Insurance Number
+currentpassword = Current Password
+newpassword = New Password
+confirmnewpassword = Confirm New Password
+yourfavoritedoctor = Your Favorite Doctor
+yourfavoritehospital = Your Favorite Hospital
+yourappointment = Your Appointment
+appointment = Appointment
+deactivethisaccount = Deactive This Account
+doctorfound = doctors found by keyword (Keyword)
+filter = Filter Your Result
+rate = Rate
+viewprofile = View Profile
+moreinfo = More Info
+yourrating = Your Rating
+comment = Comment
