--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -53,21 +53,51 @@ facts = S\u1ed1 Li\u1ec7u
 clients = C\u00e1c C\u01a1 S\u1edf
 team = Team
 findalldoctor = T\u00ecm T\u1ea5t C\u1ea3 B\u00e1c S\u0129
-setanappointment =\u0110\u1eb7t L\u1ecbch H\u1eb9n
+setanappointment = \u0110\u1eb7t L\u1ecbch H\u1eb9n
 health = S\u1ee9c Kh\u1ecfe
-register.registerform = \u0110\u0103ng k\u00fd
-register.msg1 =  This will be your login user name
-register.msg3 = B\u1ea1n s\u1ebd \u0111\u01b0\u1ee3c nh\u1eadn email x\u00e1c nh\u1eadn
-register.msg4 = H\u00e3y ki\u1ec3m tra th\u00f9ng th\u01b0 r\u00e1c n\u1ebfu kh\u00f4ng t\u00ecm th\u1ea5y
-register.btn = \u0110\u0103ng k\u00fd
-register.msg5 =T\u00f4i \u0111\u1ed3ng \u00fd v\u1edbi
-register.msg6=m\u1ecdi \u0111i\u1ec1u kho\u1ea3n
-register.msg7= khi \u0111\u0103ng k\u00fd
-forgotpass.forgot = Qu\u00ean m\u1eadt kh\u1ea9u \u00e0?
-forgotpass.resetsuccess = \u0110\u1ed5i m\u1eadt kh\u1ea9u th\u00e0nh c\u00f4ng
-forgotpass.msg1 = Ch\u00fang t\u00f4i s\u1ebd g\u1eedi link \u0111\u1ec3 \u0111\u1ed5i m\u1eadt kh\u1ea9u kh\u00e1c
-forgotpass.resetbtn = Reset
-reset.reset = \u0110\u1ed5i m\u1eadt kh\u1ea9u
-reset.newpass = M\u1eadt kh\u1ea9u m\u1edbi
-reset.msg1 = H\u00e3y ch\u1eafc ch\u1eafn l\u00e0 m\u1eadt kh\u1ea9u m\u1edbi b\u1ea3o m\u1eadt cao v\u00e0 d\u1ec5 nh\u1edb
-reset.btn = \u0110\u1ed5i m\u1eadt kh\u1ea9u
+searchdotorbyname = T\u00ecm b\u00e1c s\u0129 theo t\u00ean
+male = Nam
+female = N\u1eef
+other = Kh\u00e1c
+fullname = H\u1ecd T\u00ean
+patientinformation = Th\u00f4ng Tin Ng\u01b0\u1eddi B\u1ec7nh
+gender = Gi\u1edbi T\u00ednh
+appointmentdetail = Th\u00f4ng Tin L\u1ecbch H\u1eb9n
+doctor = B\u00e1c S\u0129
+speciality = Khoa
+specificspeciality = Chuy\u00ean Khoa
+date = Ng\u00e0y
+time = Th\u1eddi Gian
+otheractivitiesdiploma = B\u1eb1ng C\u1ea5p Kh\u00e1c
+receiceapptviaemail = Nh\u1eadn Th\u00f4ng Tin Qua Email
+personalinformation = Th\u00f4ng Tin
+workingplace = N\u01a1i L\u00e0m Vi\u1ec7c
+degree = B\u1eb1ng C\u1ea5p
+insurance = B\u1ea3o Hi\u1ec3m
+workhour = Gi\u1edd L\u00e0m Vi\u1ec7c
+addtobookmark = L\u01b0u
+hospital = B\u1ec7nh Vi\u1ec7n
+hospitalinformation = Th\u00f4ng Tin B\u1ec7nh Vi\u1ec7n
+director = Chuy\u00ean Khoa 
+website = Website
+option = T\u00f9y Ch\u1ecdn
+general = Th\u00f4ng Tin Chung
+edityourprofile = S\u1eeda T\u00e0i Kho\u1ea3n
+changepassword= \u0110\u1ed5i M\u1eadt Kh\u1ea9u
+bookmark = L\u01b0u
+insurancenumber = S\u1ed1 B\u1ea3o Hi\u1ec3m
+currentpassword = M\u1eadt Kh\u1ea9u Hi\u1ec7n T\u1ea1i
+newpassword = M\u1eadt Kh\u1ea9u M\u1edbi
+confirmnewpassword = X\u00e1c Nh\u1eadn M\u1eadt Kh\u1ea9u M\u1edbi
+yourfavoritedoctor = B\u00e1c S\u0129
+yourfavoritehospital = B\u1ec7nh Vi\u1ec7n
+yourappointment = L\u1ecbch H\u1eb9n
+appointment = L\u1ecbch H\u1eb9n
+deactivethisaccount = V\u00f4 Hi\u1ec7u H\u00f3a T\u00e0i Kho\u1ea3n
+doctorfound = b\u00e1c s\u0129 \u0111\u01b0\u1ee3c t\u00ecm th\u1ea5y 
+filter = L\u1ecdc K\u1ebft Qu\u1ea3
+rate = \u0110\u00e1nh Gi\u00e1
+viewprofile = Xem H\u1ed3 S\u01a1
+moreinfo = Xem Th\u00eam
+yourrating = \u0110\u00e1nh Gi\u00e1 C\u1ee7a B\u1ea1n
+comment = B\u00ecnh Lu\u1eadn
