--- a/src/main/resources/text_en_US.properties
+++ b/src/main/resources/text_en_US.properties
@@ -40,7 +40,9 @@ numberofdoctor = Number Of Doctor
 hoursaday = Hours a Day
 contact = Contact
 signinup = Sign In/Sign Up
-signout = Log out
+greeting = Hi
+yourprofile = Your Profile
+signout = Log Out
 home = Home
 termsofservice = Terms of Service
 privacypolicy = Privacy Policy
