--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -40,7 +40,9 @@ numberofdoctor = B\u00e1c S\u0129
 hoursaday = Gi\u1edd
 contact = Li\u00ean H\u1ec7
 signinup = \u0110\u0103ng k\u00fd/\u0110\u0103ng Nh\u1eadp
-signout = \u0110\u0103ng xu\u1ea5t
+greeting = Ch\u00e0o
+yourprofile = T\u00e0i Kho\u1ea3n
+signout = \u0110\u0103ng Xu\u1ea5t
 home = Trang Ch\u1ee7
 termsofservice = \u0110i\u1ec1u Kho\u1ea3n D\u1ecbch V\u1ee5
 privacypolicy = Ch\u00ednh S\u00e1ch B\u1ea3o M\u1eadt
