--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -103,3 +103,31 @@ viewprofile = Xem H\u1ed3 S\u01a1
 moreinfo = Xem Th\u00eam
 yourrating = \u0110\u00e1nh Gi\u00e1 C\u1ee7a B\u1ea1n
 comment = B\u00ecnh Lu\u1eadn
+resetyourpassword = Reset M\u1eadt Kh\u1ea9u
+resetyourpassword.msg1 = Nh\u1eadp email c\u1ee7a b\u1ea1n v\u00e0 ch\u00fang t\u00f4i s\u1ebd g\u1eedi li\u00ean k\u1ebft \u0111\u1ec3 b\u1ea1n reset m\u1eadt kh\u1ea9u
+resetyourpassword.btn1 = G\u1eedi tin
+forwardEverything.msg1 = \u0110\u0103ng nh\u1eadp \u0111\u1ec3 ti\u1ebfp t\u1ee5c
+forwardEverything.msg2 = Nh\u1ea5p v\u00e0o \u0111\u00e2y \u0111\u1ec3 quay l\u1ea1i trang ch\u1ee7 n\u1ebfu tr\u00ecnh duy\u1ec7t kh\u00f4ng t\u1ef1 chuy\u1ec3n h\u01b0\u1edbng
+loginsuccess = B\u1ea1n \u0111\u00e3 \u0111\u0103ng nh\u1eadp th\u00e0nh c\u00f4ng
+hospitaladminname = T\u00ean Qu\u1ea3n L\u00fd B\u1ec7nh Vi\u1ec7n
+hospitaladminemail = Email Qu\u1ea3n L\u00fd B\u1ec7nh Vi\u1ec7n 
+add = Th\u00eam
+acceptinsurance = Ch\u1ea5p nh\u1eadn b\u1ea3o hi\u1ec3m
+login = \u0110\u0103ng Nh\u1eadp
+forgotemailorpassword = Qu\u00ean email ho\u1eb7c m\u1eadt kh\u1ea9u
+registeraccount = \u0110\u0103ng K\u00fd T\u00e0i Kho\u1ea3n
+register.msg1 = H\u00e3y ch\u1eadp nh\u1eadn nh\u1eefng \u0111i\u1ec3u kho\u1ea3n
+register.msg2 = T\u00f4i \u0111\u1ed3ng \u00fd v\u1edbi
+register.msg3 = H\u00e3y \u0111\u1ecdc nh\u1eefng \u0111i\u1ec1u kho\u1ea3n
+register.msg4 = nh\u1eefng \u0111i\u1ec1u kho\u1ea3n
+register.msg5 = \u0110\u1ec3 \u0111\u0103ng k\u00fd
+register.msg6 = B\u1ea1n s\u1ebd nh\u1eadn \u0111\u01b0\u1ee3c email \u0111\u1ec3 x\u00e1c nh\u1eadn ho\u00e0n th\u00e0nh vi\u1ec7c \u0111\u0103ng k\u00fd
+register.msg7 = Nh\u1edb ki\u1ec3m tra th\u00f9ng th\u01b0 r\u00e1c
+alreadyhaveaccount = \u0110\u00e3 c\u00f3 t\u00e0i kho\u1ea3n, \u0111\u0103ng nh\u1eadp
+yourpassword = M\u1eadt kh\u1ea3u c\u1ee7a b\u1ea1n
+enterpassword = Nh\u1eadp m\u1eadt kh\u1ea9u m\u1edbi
+reenterpassword = Nh\u1eadp l\u1ea1i m\u1eadt kh\u1ea9u
+edit = Ch\u1ec9nh s\u1eeda
+post = \u0110\u0103ng
+remove = B\u1ecf
+
