--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -100,7 +100,7 @@ doctorfound = b\u00e1c s\u0129 \u0111\u01b0\u1ee3c t\u00ecm th\u1ea5y
 filter = L\u1ecdc K\u1ebft Qu\u1ea3
 rate = \u0110\u00e1nh Gi\u00e1
 viewprofile = Xem H\u1ed3 S\u01a1
-moreinfo = Xem Th\u00eam
+moreinfor = Xem Th\u00eam
 yourrating = \u0110\u00e1nh Gi\u00e1 C\u1ee7a B\u1ea1n
 comment = B\u00ecnh Lu\u1eadn
 resetyourpassword = Reset M\u1eadt Kh\u1ea9u
@@ -130,4 +130,5 @@ reenterpassword = Nh\u1eadp l\u1ea1i m\u1eadt kh\u1ea9u
 edit = Ch\u1ec9nh s\u1eeda
 post = \u0110\u0103ng
 remove = B\u1ecf
+hospitalfound = b\u1ec7nh vi\u1ec7n \u0111\u01b0\u1ee3c t\u00ecm th\u1ea5y
 
