--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -129,7 +129,7 @@ enterpassword = Nh\u1eadp m\u1eadt kh\u1ea9u m\u1edbi
 reenterpassword = Nh\u1eadp l\u1ea1i m\u1eadt kh\u1ea9u
 edit = Ch\u1ec9nh s\u1eeda
 post = \u0110\u0103ng
-remove = B\u1ecf
+remove = X\u00f3a
 hospitalfound = b\u1ec7nh vi\u1ec7n \u0111\u01b0\u1ee3c t\u00ecm th\u1ea5y
 previous = L\u00f9i
 next = Ti\u1ebfp
@@ -158,3 +158,4 @@ home.msg22 = Doctor Strange l\u00e0 H\u1ec7 th\u1ed1ng Y t\u1ebf \u0111i \u0111\
 home.msg23 = G\u1ecdi ch\u00fang t\u00f4i khi b\u1ea1n c\u1ea7n
 findhospital = T\u00ecm b\u1ec7nh vi\u1ec7n
 searchhospitalbyname = T\u00ecm b\u1ec7nh vi\u1ec7n theo t\u00ean
+searchbtn = T\u00ecm ki\u1ebfm
