--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -3,7 +3,6 @@
 # and open the template in the editor.
 EN = Ti\u1ebfng Anh
 VN = TI\u1ebfng Vi\u1ec7t
-FR = Ti\u1ebfng Ph\u00e1p
 username =  T\u00ean \u0111\u0103ng nh\u1eadp
 password = M\u1eadt kh\u1ea9u
 passwordconfirm = Nh\u1eadp l\u1ea1i m\u1eadt kh\u1ea9u
@@ -19,8 +18,8 @@ language = Ng\u00f4n Ng\u1eef
 signup = \u0110\u0103ng K\u00fd
 yourprofile = Trang C\u00e1 Nh\u00e2n
 backtohomepage = Quay L\u1ea1i Trang Ch\u1ee7
-rememberme = Ghi Nh\u1edb \u0110\u0103ng Nh\u1eadp
-imnew = Ng\u01b0\u1eddi M\u1edbi
+rememberme = L\u01b0u \u0110\u0103ng Nh\u1eadp
+imnew = T\u1ea1o t\u00e0i kho\u1ea3n
 ihaveanaccount =  \u0110\u00e3 C\u00f3 T\u00e0i Kho\u1ea3n
 getstarted = B\u1eaft \u0110\u1ea7u
 mission = Nhi\u1ec7m V\u1ee5 
