--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -85,7 +85,7 @@ option = T\u00f9y Ch\u1ecdn
 general = Th\u00f4ng Tin Chung
 edityourprofile = S\u1eeda T\u00e0i Kho\u1ea3n
 changepassword= \u0110\u1ed5i M\u1eadt Kh\u1ea9u
-bookmark = L\u01b0u
+bookmark = \u0110\u00e3 L\u01b0u
 insurancenumber = S\u1ed1 B\u1ea3o Hi\u1ec3m
 currentpassword = M\u1eadt Kh\u1ea9u Hi\u1ec7n T\u1ea1i
 newpassword = M\u1eadt Kh\u1ea9u M\u1edbi
@@ -158,3 +158,4 @@ home.msg23 = G\u1ecdi ch\u00fang t\u00f4i khi b\u1ea1n c\u1ea7n
 findhospital = T\u00ecm b\u1ec7nh vi\u1ec7n
 searchhospitalbyname = T\u00ecm b\u1ec7nh vi\u1ec7n theo t\u00ean
 searchbtn = T\u00ecm ki\u1ebfm
+options = T\u00f9y ch\u1ecdn
