--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -104,7 +104,7 @@ yourrating = \u0110\u00e1nh Gi\u00e1 C\u1ee7a B\u1ea1n
 comment = B\u00ecnh Lu\u1eadn
 resetyourpassword = Reset M\u1eadt Kh\u1ea9u
 resetyourpassword.msg1 = Nh\u1eadp email c\u1ee7a b\u1ea1n v\u00e0 ch\u00fang t\u00f4i s\u1ebd g\u1eedi li\u00ean k\u1ebft \u0111\u1ec3 b\u1ea1n reset m\u1eadt kh\u1ea9u
-resetyourpassword.btn1 = G\u1eedi tin
+resetyourpassword.btn1 = G\u1eedi email cho t\u00f4i
 forwardEverything.msg1 = \u0110\u0103ng nh\u1eadp \u0111\u1ec3 ti\u1ebfp t\u1ee5c
 forwardEverything.msg2 = Nh\u1ea5p v\u00e0o \u0111\u00e2y \u0111\u1ec3 quay l\u1ea1i trang ch\u1ee7 n\u1ebfu tr\u00ecnh duy\u1ec7t kh\u00f4ng t\u1ef1 chuy\u1ec3n h\u01b0\u1edbng
 loginsuccess = B\u1ea1n \u0111\u00e3 \u0111\u0103ng nh\u1eadp th\u00e0nh c\u00f4ng
@@ -113,7 +113,7 @@ hospitaladminemail = Email Qu\u1ea3n L\u00fd B\u1ec7nh Vi\u1ec7n
 add = Th\u00eam
 acceptinsurance = Ch\u1ea5p nh\u1eadn b\u1ea3o hi\u1ec3m
 login = \u0110\u0103ng Nh\u1eadp
-forgotemailorpassword = Qu\u00ean email ho\u1eb7c m\u1eadt kh\u1ea9u
+forgotemailorpassword = Qu\u00ean m\u1eadt kh\u1ea9u?
 registeraccount = \u0110\u0103ng K\u00fd T\u00e0i Kho\u1ea3n
 register.msg1 = H\u00e3y ch\u1eadp nh\u1eadn nh\u1eefng \u0111i\u1ec3u kho\u1ea3n
 register.msg2 = T\u00f4i \u0111\u1ed3ng \u00fd v\u1edbi
