--- a/src/main/resources/text_vi_VN.properties
+++ b/src/main/resources/text_vi_VN.properties
@@ -85,7 +85,7 @@ option = T\u00f9y Ch\u1ecdn
 general = Th\u00f4ng Tin Chung
 edityourprofile = S\u1eeda T\u00e0i Kho\u1ea3n
 changepassword= \u0110\u1ed5i M\u1eadt Kh\u1ea9u
-bookmark = \u0110\u00e3 L\u01b0u
+bookmark = Bookmark
 insurancenumber = S\u1ed1 B\u1ea3o Hi\u1ec3m
 currentpassword = M\u1eadt Kh\u1ea9u Hi\u1ec7n T\u1ea1i
 newpassword = M\u1eadt Kh\u1ea9u M\u1edbi
@@ -108,7 +108,7 @@ resetyourpassword.btn1 = G\u1eedi email cho t\u00f4i
 forwardEverything.msg1 = \u0110\u0103ng nh\u1eadp \u0111\u1ec3 ti\u1ebfp t\u1ee5c
 forwardEverything.msg2 = Nh\u1ea5p v\u00e0o \u0111\u00e2y \u0111\u1ec3 quay l\u1ea1i trang ch\u1ee7 n\u1ebfu tr\u00ecnh duy\u1ec7t kh\u00f4ng t\u1ef1 chuy\u1ec3n h\u01b0\u1edbng
 loginsuccess = B\u1ea1n \u0111\u00e3 \u0111\u0103ng nh\u1eadp th\u00e0nh c\u00f4ng
-hospitaladminname = T\u00ean Qu\u1ea3n L\u00fd B\u1ec7nh Vi\u1ec7n
+hospitaladminname = Qu\u1ea3n L\u00fd B\u1ec7nh Vi\u1ec7n
 hospitaladminemail = Email Qu\u1ea3n L\u00fd B\u1ec7nh Vi\u1ec7n 
 add = Th\u00eam
 acceptinsurance = Ch\u1ea5p nh\u1eadn b\u1ea3o hi\u1ec3m
